--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB="host=ep-winter-waterfall-a26wqgxm.eu-central-1.aws.neon.tech user=neondb_owner password=ItWKFy8Af9EU dbname=neondb sslmode=require"
+DB="your_db_connection_url"
+SECRET="SxlzZHgnTVU2yGPoibOZK7oEWkRNFNbX"
+PORT="3000"
